--- a/css/app.scss
+++ b/css/app.scss
@@ -1,3 +1,5 @@
+@import 'spinner';
+
 body {
 	margin: 0;
 }
@@ -33,11 +35,19 @@ ul {
 		display: block;
 		width: 100%;
 		text-align: center;
+		margin-bottom: 15px;
+		font-size: 18px;
+		color: #fff;
 	}
 
 	input {
 		display: block;
 		width: 100%;
+		height: 28px;
+		font-size: 14px;
+		border-radius: 5px;
+		border: none;
+		padding: 5px;
 	}
 }
 
@@ -90,6 +100,7 @@ ul {
 	position: absolute;
 	right: 0;
 	height: 100%;
+	background-color: #fff;
 }
 
 .thread-list-item {
